--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,12 @@ body, input, button {
   margin-bottom: 8px;
 }
 
+.content form label span{
+  font-weight: normal;
+  color: #999;
+  font-size: 12px;
+}
+
 .content form input{
   margin-bottom: 20px;
   border: 1px;
@@ -66,7 +72,7 @@ body, input, button {
   font-size: 16px;
 }
 
-.content button.btn_entrar{
+.content button.btn{
   border: 0;
   border-radius: 2px;
   width: 100%;
@@ -79,6 +85,6 @@ body, input, button {
   cursor: pointer;
 }
 
-.content button.btn_entrar:hover{
+.content button.btn:hover{
   background: #e14f50;
 }
