--- a/src/pages/Dashboard/styles.css
+++ b/src/pages/Dashboard/styles.css
@@ -29,3 +29,28 @@ ul.spot-list li span{
     font-size: 15px;
     color: #999;
 }
+
+ul.notification{
+    list-style: none;
+    margin-bottom: 15px;
+}
+
+ul.notification li{
+    font-size: 16px;
+    line-height: 24px;
+}
+
+ul.notification li button{
+    margin-right: 10px;
+    border: 0;
+    font-weight: bold;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+ul.notification li button.accept{
+    color: #84c870;
+}
+ul.notification li button.reject{
+    color: #E55E5E;
+}
